<resources>
    <string name="app_name">finance tracker</string>
    <string name="get_insights_into_your_daily_expenses_and_save_more">Get insights into your daily expenses and save more.</string>
    <string name="track_your_spending">Track Your Spending</string>
    <string name="app_logo">App Logo</string>
    <string name="app_logo1">App Logo</string>
    <string name="email">Email</string>
    <string name="add_transaction">Add transaction</string>
    <string name="tranc">Add transaction</string>
    <string name="title">Title</string>
    <string name="amount">Amount</string>
    <string name="type">Type</string>
    <string name="date">Date</string>
    <string name="todo">TODO</string>
    <string name="welcome_back">Welcome Back!</string>
    <string name="login_to_cashflow">Login to CashFlow</string>
    <string name="email1">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="don_t_have_an_account_sign_up">Don\'t have an account? Sign Up</string>
    <string name="hello_hashyy">Hello, Hashyy 👋</string>
    <string name="total_balance">Total Balance</string>
    <string name="rs_0_00">Rs. 0.00</string>
    <string name="income">Income:</string>
    <string name="rs_0_000">Rs. 0.00</string>
    <string name="expense">Expense:</string>
    <string name="rs_0_002">Rs. 0.00</string>
    <string name="todo1">TODO</string>
    <string name="food">Food</string>
    <string name="transport">Transport</string>
    <string name="bills">Bills</string>
    <string name="todo3">TODO</string>
    <string name="entertainment">Entertainment</string>
    <string name="todo4">TODO</string>
    <string name="recent_transactions">Recent Transactions</string>
    <string name="other">Other</string>
    <string name="Username">Username\n</string>
    <string name="add_transaction1">Add Transaction</string>
    <string name="amount1">💸 Amount</string>
    <string name="expense1">Expense</string>
    <string name="income1">Income</string>
    <string name="learn_to_invest">learn To Invest\n</string>
    <string name="next">Next</string>
    <string name="onboarding_illustration">ill</string>
    <string name="investment_purpose">Investment Purpose</string>
    <string name="In_investing_we_must_have_a_goal_that_the_investment_product_that_we_choose_is_right.">Investment Purpose Description</string>
    <string name="In_investing_we_must_have_a_goal_that_the_investment_product_that_we_choose_is_right">In_investing_we_must_have_a_goal_that_the_investment_product_that_we_choose_is_right\n</string>
    <string name="in_investing_we_must_have_a_goal_that_the_investment_product_that_we_choose_is_right">In investing we must have a goal that the investment product that we choose is right.</string>
    <string name="delete">Delete</string>
    <string name="view_all">View All\n</string>
    <string name="categories">categories</string>
</resources>