<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/todo"
        android:src="@drawable/splash"
        android:scaleType="centerCrop" />

    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#33000000" />
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="24dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/logoImageView"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_marginTop="40dp"
                android:layout_marginBottom="20dp"
                android:contentDescription="@string/app_logo"
                android:src="@drawable/logo" />

            <TextView
                android:id="@+id/welcomeText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="@string/welcome_back"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/loginMessage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_to_cashflow"
                android:textColor="@color/primaryBlue"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/usernameEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:autofillHints=""
                android:hint="@string/Username"
                android:background="@drawable/edittext_bg"
                android:inputType="text"
                android:padding="12dp" />

            <EditText
                android:id="@+id/passwordEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:autofillHints=""
                android:background="@drawable/edittext_bg"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:padding="12dp" />

            <Button
                android:id="@+id/loginButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:background="@drawable/button_bg"
                android:backgroundTint="@color/primaryBlue"
                android:padding="12dp"
                android:text="@string/login"
                android:textAllCaps="false"
                android:textColor="@android:color/white" />

            <TextView
                android:id="@+id/signupText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/don_t_have_an_account_sign_up"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:clickable="true"
                android:focusable="true" />


        </LinearLayout>
    </ScrollView>

</FrameLayout>
