<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/onboarding_illustration"
        android:scaleType="fitXY"
        android:src="@drawable/wavenew" />

    <ImageView
        android:layout_width="318dp"
        android:layout_height="417dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="38dp"
        android:layout_marginBottom="291dp"
        android:background="@drawable/onboarding3d" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="402dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="-155dp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="24dp">

        <TextView
            android:id="@+id/onboardingTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/learn_to_invest"
            android:textColor="@color/black"
            android:textSize="22sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/onboardingDesc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:gravity="center"
            android:text="@string/in_investing_we_must_have_a_goal_that_the_investment_product_that_we_choose_is_right"
            android:textColor="@color/gray"
            android:textSize="14sp" />

        <Button
            android:id="@+id/nextBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:backgroundTint="@color/cardview_dark_background"
            android:paddingHorizontal="48dp"
            android:text="@string/next"
            android:textAllCaps="false"
            android:textColor="@color/white" />

    </LinearLayout>

</RelativeLayout>